# Cargo.toml
[package]
name = "markdown-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = "0.14.0"
pulldown-cmark = "0.13"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
